apps/docs/v0.2.8/reference/cli.mdx
---
title: "CLI reference"
description: "Rigkit CLI commands, global options, project discovery, completion, cache commands, and JSON output."
noindex: true
---

The global command is `rig`. It starts or connects to the project-local runtime
installed by `@rigkit/sdk`, loads the selected `rig.config.ts`, and runs core
or project-defined operations.

## Global options

Global options come before the command. Use double-dash long flags for
consistency with command options:

```sh
rig --chdir=examples/smoke plan
rig --config=api.rig.config.ts apply
rig --state=/tmp/rigkit-state.sqlite plan
rig --json plan
```

Options:

| Option | Description |
| --- | --- |
| `--chdir <dir>` | Switch to a directory before resolving the config. |
| `--config <file>` | Load a specific config file, relative to `--chdir` when set. |
| `--state <file>` | Use a specific local runtime state database. |
| `--json` | Print machine-readable JSON where supported. |

By default Rigkit searches upward from the current directory for
`rig.config.ts`. Named configs ending in `.rig.config.ts` must be selected with
`--config`.

Legacy single-dash global forms such as `-chdir=DIR`, `-config=FILE`,
`-state=FILE`, and `-json` are still accepted.

## `rig init`

Initialize a project:

```sh
rig init
rig init --name website --package-manager pnpm
rig init --name platform --package-manager skip
```

Options:

| Option | Description |
| --- | --- |
| `--name <name>` | Project and workflow name. Required in non-interactive terminals. |
| `--api-key <key>` | Write `FREESTYLE_API_KEY` to `.env`. |
| `--package-manager <pm>` | `npm`, `bun`, `pnpm`, or `skip`. |
| `--force` | Overwrite an existing config file. |
| `--json` | Print the init result as JSON. |

`rig init` creates a project directory, `rig.config.ts`, package metadata, and
ignore rules for `.env` and `.rigkit/`.

## `rig plan`

Show which workflow tasks are cached or pending:

```sh
rig plan
rig plan --workflow api
rig plan --all
rig plan --discover
rig plan --json
```

Options:

| Option | Description |
| --- | --- |
| `--workflow <name>` | Select a workflow when the config exports multiple workflows. |
| `--all` | Run against every discovered project. |
| `--discover` | Discover projects below the selected directory. |
| `--json` | Print JSON. |

`plan` does not run pending tasks. It reports the graph state Rigkit would use
for `apply`.

## `rig apply`

Run pending workflow tasks and write cached outputs:

```sh
rig apply
rig apply --workflow web
rig apply --all
rig apply --discover
rig apply --json
```

Options are the same as `plan`.

## `rig create`

Create a named workspace from the selected workflow's final context:

```sh
rig create dev
rig create review-123 --workflow api
rig create dev --json
```

If the project has no workspace lifecycle, `create` is not available.

## `rig run`

Run a workspace operation:

```sh
rig run dev ssh
rig run dev open-cmux
rig run dev status --json
```

The first argument is the workspace name. The second is a
`.workspaceOperation(...)` id from the config.

Project-defined operation inputs become CLI flags when the runtime exposes a
CLI shape for them. Use `--json` for machine-readable operation results.

## `rig rm`

Remove workspaces:

```sh
rig rm dev
rig rm dev --yes
rig rm --all --yes
rig rm --json
```

Options:

| Option | Description |
| --- | --- |
| `-y`, `--yes` | Skip confirmation. |
| `--all` | Remove every workspace in the selected project. |
| `--json` | Print JSON. |

`rm` calls the workflow's `workspace.remove` hook before deleting the workspace
record.

## `rig ls`

List workspaces:

```sh
rig ls
rig ls --json
```

Additional list targets:

```sh
rig ls snapshots
rig ls config
```

`snapshots` lists cached snapshot runs. `config` shows resolved project paths.

## `rig cache`

Inspect and change cache state.

List cache entries:

```sh
rig cache ls
rig cache ls --json
```

Invalidate cached task output so tasks rerun on the next plan/apply:

```sh
rig cache invalidate install-tooling
rig cache invalidate --all
rig cache invalidate --all --yes
```

Clear cache entries:

```sh
rig cache clear --local
rig cache clear --global
rig cache clear --global --all
```

Options:

| Option | Description |
| --- | --- |
| `--local` | Clear local cache entries for the selected config. |
| `--global` | Clear global fragments reachable from the selected workflow. |
| `--all` | With `--global`, clear every global fragment without loading a config. |
| `--json` | Print JSON. |

Use invalidation when you want Rigkit to keep the cache records but mark them
stale. Use clear when you want to delete cache records.

## `rig projects`

Discover Rigkit projects below the current or selected directory:

```sh
rig projects
rig --chdir=examples projects
rig projects --json
```

Discovery skips `.git`, `.rigkit`, `node_modules`, `dist`, and `build`.

## `rig doctor`

Show runtime diagnostics:

```sh
rig doctor
rig doctor --cli
rig doctor --json
```

Use `--cli` to show CLI diagnostics without connecting to a project runtime.

## `rig completion`

Generate shell completion:

```sh
eval "$(rig completion zsh)"
eval "$(rig completion bash)"
rig completion fish | source
```

Completion suggests commands, options, workspace names, and workspace
operations. If you installed Rigkit with the official installer, the installer
usually adds the completion hook to your shell profile for future terminal
sessions.

## `rig version` and `rig help`

```sh
rig version
rig help
rig run --help
```

`rig --version` and `rig -v` also print the CLI version.

## Environment variables

| Variable | Description |
| --- | --- |
| `RIGKIT_RENDER=0` | Force the plain text renderer instead of the interactive timeline. |
| `RIGKIT_NO_CONSOLE_INTERCEPT=1` | Disable task console interception and write directly to the host terminal. |
| `FREESTYLE_API_KEY` | Optional Freestyle API key when configs opt into API-key auth. |

Project `.env` files are loaded from the selected project directory.

## Exit behavior

Rigkit exits non-zero when:

- config loading fails;
- provider startup fails;
- a task, workspace hook, or operation throws;
- operation input validation fails;
- a package-manager install from `rig init` fails;
- a selected workspace or operation does not exist.

For automation, prefer `--json` on commands that support it and pass
non-interactive flags such as `--name`, `--package-manager skip`, and `--yes`.
